2009-04-16  Marco Caliari <marco.caliari@univr.it>

	* toeplitz.m: Treat separately the sparse case.

2009-04-14  Thomas Treichl  <Thomas.Treichl@gmx.net>

	* plot/__marching_cube__.m: Add help text.
	* plot/isonormals.m: Add help text and tests.

2009-04-14  David Bateman  <dbateman@free.fr>

	* plot/__patch__.m: Set default facecolor to [0,1,0].
	
2009-04-12  Aravindh Krishnamoorthy <aravindh.k.dev@gmail.com>
       * special-matrix/hadamard.m: Fix a documentation mistake.

2009-04-14  Jaroslav Hajek  <highegg@gmail.com>

	* polynomial/polyaffine.m: New function.
	* polynomial/polyscale.m: Remove.
	* polynomial/polytrans.m: Remove.

2009-04-12  Ben Abbott <bpabbott@mac.com>

	* plot/__gnuplot_open_stream__.m: New function.
	* plot/__gnuplot_get_var__.m: If not open, open the gnuplot plot stream.
	* plot/gnuplot_drawnow.m: Replace internal function open_gnuplot_stream
	with new __gnuplot_open_stream__.

2009-04-11  David Bateman  <dbateman@free.fr>

	* geometry/trisurf.m: New file.
	* geometry/Makefile.in (SOURCES): Add it here.
	* geometry/trimesh.m: Convert to using 3D patches.
	* plot/__go_draw_axes__.m: Allow 3D filled triangular patches.
	* plot/__patch__.m: Rewrite to allow update of dependent variables
	with listener functions amongst themselves.
	* plot/patch.m: Add 3D demo. Update the documentation.

2009-04-11  Martin Helm  <martinh@sirius.mhelm.de>

	* plot/__interp_cube__.m, plot/__marching_cube__.m, isocolors.m,
	isonnormals.m, isosurface.m: New files.
	* plot/Makefile.in (SOURCES): Add them here.

2009-04-11  Jaroslav Hajek  <highegg@gmail.com>

	* set/intersect.m: Add missing branch.

2009-04-10  Ben Abbott <bpabbott@mac.com>

	* plot/print.m: If no pdf support in gnuplot, then "convert" from
	postscript to pdf. For gnuplot 4.2.x use "convert", if it is present,
	to produce pdf output. Only render a full page for ps/pdf output.
	Rename variable, "size" to "canvas_size". Reformat help text to